# end-to-end-tester-p2

./: README.md
api/: .env-template  README.md  manage.py  pyproject.toml
api/end_to_end_tester/apps/people/: admin.py
api/end_to_end_tester/django/: settings.py  urls.py  wsgi.py
api/fixtures/: users.json
front/: README.md  nuxt.config.js  package-lock.json  package.json
front/components/: UserMessage.vue
front/pages/: login.vue
tester/: .gitignore  README.md  browserstack.yml  package-lock.json  package.json
tester/features/: us1.feature
tester/features/step_definitions/: given_steps.js  then_steps.js  when_steps.js
tester/features/support/: hooks.js
